--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,17 @@
 			<scope>provided</scope>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-connector-kafka_2.12</artifactId>
 			<version>${flink.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-connector-hive_2.12</artifactId>
+			<version>1.13.1</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
